--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.3.0",
+    "lodash": "^4.17.4",
     "material-ui": "^0.19.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-persist": "^4.9.1",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
