--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.16.2",
     "firebase": "^4.3.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.19.0",
@@ -11,8 +12,8 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-swipeable-views": "^0.12.8",
+    "react-transition-group": "1.x",
     "redux": "^3.7.2",
-    "redux-persist": "^4.9.1",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
